# AnimationCrystalBall

./: .gitignore  CMakeLists.txt  README.md
script/: ios_build.sh
script/android/: settings.gradle
script/android/app/: build.gradle
script/android/app/src/main/: AndroidManifest.xml
script/android/app/src/main/java/com/example/animationcrystalball/: MainActivity.java
script/android/app/src/main/res/values/: strings.xml  themes.xml
script/android/app/src/main/res/values-night/: themes.xml
script/android/gradle/wrapper/: gradle-wrapper.properties
source/: Application.cpp  Application.h  Window.cpp  Window.h  main.cpp
source/Platform/IOS/: IOSApplication.h  IOSApplication.mm  IOSWindow.h  IOSWindow.mm  MyApplicationDelegate.h  MyApplicationDelegate.mm
source/Platform/Win32/: Win32Application.cpp  Win32Application.h  Win32Window.cpp  Win32Window.h
source/Platform/macOS/: MacOSApplication.h  MacOSApplication.mm  MacOSWindow.h  MacOSWindow.mm
